# Valquiria_Joao_Victor_Huguenin_Lucas_Parente_Pedro_Lippi_Questao4

./: CMakeLists.txt  Elefante.c  README.md  funcoes_matrix.c  main.c
src/: espelha_horizontal.c  espelha_vertical.c  funcoes_matrix.c  funcoes_matrix.h  gira_matrix.h  gira_sentido_anti_horario.c  gira_sentido_horario.c  gira_sentindio_horario.c  main.c
